--- a/index.html
+++ b/index.html
@@ -400,10 +400,18 @@
                   Go to smarterasp.net or the hosting company you have choosen and create your account.<br />
                   <i>If you choose smarterasp.net free plan, you have to activate it on the dashboard by providing the requested info before doing anything</i>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                After activating it, click on this icon to access the control panel or the one for your hosting. This is plesk most of the time 
+                  <img src="assets/images/smarter-controlpanel.png" alt="smarterasp.net" class="img-fluid mt-3">
+                </li>
+                <li>
+                
+                </li>
+                <li>
+                
+                </li>
+                <li>
+                </li>
                 <li></li>
                 <li></li>
                 <li></li>
